--- a/index.html
+++ b/index.html
@@ -23,34 +23,33 @@
         </div>  
 
         <div id="list">
-            <span><h2>New Task</h2></span>
-                <span>Quarterly Newsletter</span>
+            <span><h2>&#9662; New Task</h2></span>
+                <span>&#10003; Quarterly Newsletter</span>
                     <button class="editorial">Editorial</button>
 
 
         </div>        
         <div id="list">
-            <span><h2>Today</h2></span>
-            <span>Recruiting blog post</span>
+            <span><h2>&#9662; Today</h2></span>
+            <span>&#10003; Recruiting blog post</span>
                 <button class="editorial">Editorial</button>
-                
-            <p>Mobile app launch</p>
+            <p>&#10003; Mobile app launch</p>
                 <button class="Q1">Q1 Goals</button>
             <p>Interview John H.</p>
                 <button class="recruiting">Recruiting</button>
-            <p>Summit update to mobile storefronts</p>
-                <button>Mobile</button>
+            <p>&#10003; Summit update to mobile storefronts</p>
+                <button class="mobile">Mobile</button>
 
 
         </div>        
         <div id="list">
-            <span><h2>Upcoming</h2></span>
+            <span><h2>&#9662; Upcoming</h2></span>
             <p>Schedule meeting with Alex</p>
-            <p>Homepage refresh</p>
+            <p>&#10003; Homepage refresh</p>
                 <button class="website">Website</button>
-            <p>Onboard new Sales team members</p>
+            <p>&#10003; Onboard new Sales team members</p>
                 <button class="sales">Sales</button>
-            <p>Review editorial calendar</p>
+            <p>&#10003;Review editorial calendar</p>
                 <button class="editorial">Editorial</button>
 
 
