--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div id="headerlogo">
             <img id="logo" src="img/Logo.png" alt="">
-            <span id="logo-text"><h1>Toobolist</h1></span>
+            <h1>Toobolist</h1>
         </div>
     </header>
     
@@ -33,23 +33,29 @@
             <span><h2>&#9662; Today</h2></span>
             <span>&#10003; Recruiting blog post</span>
                 <button class="editorial">Editorial</button>
-            <p>&#10003; Mobile app launch</p>
+                <br>
+            <span>&#10003; Mobile app launch</span>
                 <button class="Q1">Q1 Goals</button>
-            <p>Interview John H.</p>
+                <br>
+            <span>&#9447; Interview John H.</span>
                 <button class="recruiting">Recruiting</button>
-            <p>&#10003; Summit update to mobile storefronts</p>
+                <br>
+            <span>&#10003; Summit update to mobile storefronts</span>
                 <button class="mobile">Mobile</button>
 
 
         </div>        
         <div id="list">
             <span><h2>&#9662; Upcoming</h2></span>
-            <p>Schedule meeting with Alex</p>
-            <p>&#10003; Homepage refresh</p>
+            <span>&#9447; Schedule meeting with Alex</span>
+            <br>
+            <span>&#10003; Homepage refresh</span>
                 <button class="website">Website</button>
-            <p>&#10003; Onboard new Sales team members</p>
+                <br>
+            <span>&#10003; Onboard new Sales team members</span>
                 <button class="sales">Sales</button>
-            <p>&#10003;Review editorial calendar</p>
+                <br>
+            <span>&#10003;Review editorial calendar</span>
                 <button class="editorial">Editorial</button>
 
 
