--- a/index.html
+++ b/index.html
@@ -20,42 +20,43 @@
             <div class="button">
             <button class="add-task">Add Task</button>
             <button class="add-section">Add Section</button>
+            <hr>
         </div>  
 
         <div id="list">
             <span><h2>&#9662; New Task</h2></span>
-                <span>&#10003; Quarterly Newsletter</span>
+                <span class="spunta">&#10003;</span><span>Quarterly Newsletter</span>
                     <button class="editorial">Editorial</button>
 
 
         </div>        
         <div id="list">
             <span><h2>&#9662; Today</h2></span>
-            <span>&#10003; Recruiting blog post</span>
+            <span class="spunta">&#10003;</span><span>Recruiting blog post</span>
                 <button class="editorial">Editorial</button>
                 <br>
-            <span>&#10003; Mobile app launch</span>
+            <span class="spunta">&#10003;</span><span>Mobile app launch</span>
                 <button class="Q1">Q1 Goals</button>
                 <br>
-            <span>&#9447; Interview John H.</span>
+            <span class="x-rossa">&#10005;</span><span>Interview John H.</span>
                 <button class="recruiting">Recruiting</button>
                 <br>
-            <span>&#10003; Summit update to mobile storefronts</span>
+            <span class="spunta">&#10003;</span><span>Summit update to mobile storefronts</span>
                 <button class="mobile">Mobile</button>
 
 
         </div>        
         <div id="list">
             <span><h2>&#9662; Upcoming</h2></span>
-            <span>&#9447; Schedule meeting with Alex</span>
+            <span class="x-rossa">&#10005;</span><span>Schedule meeting with Alex</span>
             <br>
-            <span>&#10003; Homepage refresh</span>
+            <span class="spunta">&#10003;</span><span>Homepage refresh</span>
                 <button class="website">Website</button>
                 <br>
-            <span>&#10003; Onboard new Sales team members</span>
+            <span class="spunta">&#10003;</span><span>Onboard new Sales team members</span>
                 <button class="sales">Sales</button>
                 <br>
-            <span>&#10003;Review editorial calendar</span>
+            <span class="spunta">&#10003;</span><span>Review editorial calendar</span>
                 <button class="editorial">Editorial</button>
 
 
